# minios

./: README.md
source/: .gitignore  Cargo.toml  linker.ld  readme copy.md  target.json
source/src/: main.rs  main.rs_v1  main.rs_v2  vga_buffer.rs
source/src/arch_x86_64/: idt.rs  mod.rs  pic.rs
source/src/drivers/: keyboard.rs  vga.rs
